fixed some alignment issues in the top div

--- a/style2.css
+++ b/style2.css
@@ -74,7 +74,7 @@ body{
 }
 
 .pcast-player .play-section .top{
-    margin-left: 15vh;
+    margin-left: 8vh;
     margin-top: 3vh;
 }
 
